--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ We are proud to be a part of the community, and we are committed to serving our 
     </section>
 </footer>
 <div class="sub_footer">
-<p> 2023 © All rights reserved by PXDR0</p>
+<p href="mailto:pjflaquer@icloud.com">© COPYRIGHT 2023 PXDR0 <span style="color: #e25555;">&#9829;</span></p>
 </div>
 
 <!--JAVASCRIPT
